# gizmo_engine

./: .gitignore  Cargo.toml  index.html  index.js  package.json  resources.json  web.config  webpack.config.js
src/: lib.rs  resources.rs
src/engine/: edge.rs  math.rs  object_3d.rs  renderer.rs  stars_3d.rs  triangle.rs  vertex.rs
